# cpp-magic-ascii-art

./: .gitignore  CMakeLists.txt  PNGReader.cpp  PNGReader.h  main.cpp
image-to-ascii/: BMPToASCII.cpp  BMPToASCII.h  ImageToASCII.cpp  ImageToASCII.h  PNGReader.cpp  PNGReader.h
menu/: Menu.cpp  Menu.h
pics/: test4.txt
